# GroupF_GFFParser

./: .docker-run-test.ps1  .dockerignore  .gitignore  DOCKER_USAGE.md  Dockerfile  GITHUB_ACTION_GUIDE.md  HOW_TO_USE.md  MAKEFILE_GUIDE.md  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  docker-run-test.bat  pyproject.toml  qc_report.html  run_analysis.bat  run_analysis.sh
.github/workflows/: ci.yml
notebooks/: explore_results.ipynb
results/: qc_flags.bed  qc_flags.gff3  run.json  transcript_summary.tsv
scripts/: generate_report.py  summarize_results.py
src/gene_summariser/: Summariser.py  __init__.py  cli.py  fasta.py  figures.py  generate_report.py  metrics.py  models.py  parser.py  piechart.py  praser.py  qc.py  writer.py
test/: models.gff3  test_ParserGFF.py  test_cli.py  test_fasta.py  test_figures.py  test_files.py  test_integration.py  test_qc_flags.py  testfasta.fasta  testfiletype.py
